...
        editButton = [[UIBarButtonItem alloc] initWithImage:[UIImage imageNamed:@"pen"] style:UIBarButtonItemStylePlain target:self action:@selector(onClickEditButton)];
        helpButton = [[UIBarButtonItem alloc] initWithTitle:@"?" style:UIBarButtonItemStylePlain target:self action:@selector(showHelp:)];
    }
    
//    UIBarButtonItem *editButton = [[UIBarButtonItem alloc] initWithImage:[UIImage imageNamed:@"pen"] style:UIBarButtonItemStylePlain target:self action:@selector(onClickEditButton)];

    UIImage *imageMultiFunction = [UIImage imageNamed:@"calendar"]; //set default image to be for TO_PLAN
    if (barButtonType == TO_BUY) {
        imageMultiFunction = nil;   //no need to delete because there is active recipe, it cannot be deleted anyway
    }
    else if(barButtonType == TO_COMMENT){
        imageMultiFunction = [UIImage imageNamed:@"bocken"];
    }
...
            barButtonType = TO_PLAN;
        }
    }
    
    if (barButtonType == ZERO||[[self.navigationController.viewControllers objectAtIndex:0]isKindOfClass:[self class]]) {
        //segue from left menu - latest viewed recipe, add left button
        UIBarButtonItem *leftButton = [[UIBarButtonItem alloc]initWithImage:[UIImage imageNamed:@"menu"] style:UIBarButtonItemStylePlain target:self action:@selector(showMenu)];
        NSArray *leftButtons = @[leftButton];
        self.navigationItem.leftBarButtonItems = leftButtons;
    }
    UIBarButtonItem *multiFunctionButton = [[UIBarButtonItem alloc] initWithImage:imageMultiFunction style:UIBarButtonItemStylePlain target:self action:@selector(onClickMultifunctionButton)];
    NSArray *buttons;
    if(IS_IPHONE)
...
            //                DLog(@"ViewControllers = %@",self.navigationController.viewControllers);
            
        }
        else if(([[URL fragment] isEqualToString:@"IngredientFragment"]))
        {
            [DataStore instance].ingredientByURL = query;
            ItemsViewController *homeViewController = [self.storyboard instantiateViewControllerWithIdentifier:@"ItemsView"];
            [homeViewController setIngredientSearchText:query];
            navigationController.viewControllers = @[homeViewController];
            [self.revealViewController setFrontViewPosition:FrontViewPositionLeft animated:YES];
            
        }
        
...
