...
                            <constraint firstAttribute="width" secondItem="m4x-0z-su4" secondAttribute="width" id="m7U-UF-Dut"/>
                            <constraint firstItem="m4x-0z-su4" firstAttribute="top" secondItem="xHk-rW-jNf" secondAttribute="bottom" id="m7t-QS-pHL"/>
                            <constraint firstItem="xHk-rW-jNf" firstAttribute="top" secondItem="B1C-8e-fxL" secondAttribute="bottom" id="rau-hJ-ySI"/>
                            <constraint firstAttribute="centerX" secondItem="xHk-rW-jNf" secondAttribute="centerX" id="vN0-Y8-TKm"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Matplanering" id="Lyq-QQ-vh2">
                        <barButtonItem key="leftBarButtonItem" image="menu.png" id="LhY-ZD-kdr">
                            <connections>
                                <action selector="showMenu" destination="pgo-ve-3om" id="wbv-CC-h3F"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                            <constraint firstItem="Jra-ff-N9g" firstAttribute="leading" secondItem="ySo-gu-ntC" secondAttribute="leading" id="csF-MA-Yd1"/>
                            <constraint firstItem="Jra-ff-N9g" firstAttribute="width" secondItem="ySo-gu-ntC" secondAttribute="width" id="s57-eA-cVg"/>
                            <constraint firstItem="IBh-8v-CWR" firstAttribute="leading" secondItem="ySo-gu-ntC" secondAttribute="leading" id="xRU-fi-sz3"/>
                            <constraint firstItem="Jra-ff-N9g" firstAttribute="top" secondItem="DIj-aP-oTv" secondAttribute="bottom" id="yy5-as-cEb"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Receptsamling" id="bnQ-E5-mcD">
                        <barButtonItem key="leftBarButtonItem" image="menu.png" id="xe5-Vu-eNd">
                            <connections>
                                <action selector="showMenu" destination="Gr0-Bk-RLL" id="NDZ-IV-2vL"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
